# MoneyNotes

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
client/: .dockerignore  Dockerfile  Dockerfile.prebuilt  nginx.conf  package.json  pnpm-lock.yaml
docs/: DEPLOY.md  api.md  architecture.md  database.md
docs/sql/: init.sql
scripts/: deploy-web.sh  generate-emoji-png.sh  generate-logo.mjs
server/: .dockerignore  Cargo.toml  Dockerfile
server/config/: default.toml  development.toml
server/migrations/: 001_init.sql
server/src/: lib.rs  main.rs
server/src/api/: auth.rs  bill.rs  category.rs  group.rs  ledger.rs  mod.rs  routes.rs  user.rs
server/src/config/: settings.rs
server/src/dto/: request.rs  response.rs
server/src/error/: app_error.rs  mod.rs
server/src/middleware/: auth.rs
server/src/models/: bill.rs  category.rs  group.rs  ledger.rs  mod.rs  user.rs
server/src/repositories/: mod.rs
server/src/repositories/memory/: bill_repo.rs  category_repo.rs  group_repo.rs  ledger_repo.rs  mod.rs  user_repo.rs
server/src/repositories/mongodb/: mod.rs  user_repo.rs
server/src/repositories/mysql/: bill_repo.rs  category_repo.rs  group_repo.rs  ledger_repo.rs  mod.rs  user_repo.rs
server/src/repositories/traits/: bill_repository.rs  category_repository.rs  group_repository.rs  ledger_repository.rs  mod.rs  user_repository.rs
server/src/services/: auth_service.rs
server/src/utils/: hash.rs  jwt.rs  mod.rs
