[package]
name = "money-notes-server"
version = "0.1.0"
edition = "2021"
authors = ["Money Notes Team"]
description = "A personal and group accounting application server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - MySQL
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }

# Database - MongoDB (暂时禁用，后续添加)
# mongodb = { version = "2", default-features = false, features = ["tokio-runtime"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
